WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99541
[mac] Fix build break - processPath should be initialized.
https://bugs.webkit.org/show_bug.cgi?id=99541
Summary
[mac] Fix build break - processPath should be initialized.
Dongwoo Joshua Im (dwim)
Reported
2012-10-16 22:31:12 PDT
There is build error because processPath isn't initialized.
Attachments
Patch
(1.49 KB, patch)
2012-10-16 22:34 PDT
,
Dongwoo Joshua Im (dwim)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dongwoo Joshua Im (dwim)
Comment 1
2012-10-16 22:34:59 PDT
Created
attachment 169090
[details]
Patch
Adam Barth
Comment 2
2012-10-16 22:36:27 PDT
Comment on
attachment 169090
[details]
Patch ok
WebKit Review Bot
Comment 3
2012-10-16 22:56:57 PDT
Comment on
attachment 169090
[details]
Patch Clearing flags on attachment: 169090 Committed
r131551
: <
http://trac.webkit.org/changeset/131551
>
WebKit Review Bot
Comment 4
2012-10-16 22:57:01 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2012-10-17 10:59:31 PDT
Which Mac build was broken? Unless I'm missing something, this code was added a week ago in
bug 98543
, and Mac build was not failing.
Brady Eidson
Comment 6
2012-10-17 11:02:22 PDT
(In reply to
comment #5
)
> Which Mac build was broken? Unless I'm missing something, this code was added a week ago in
bug 98543
, and Mac build was not failing.
Indeed. Also, there was actually nothing wrong with the code before that a modern compiler couldn't figure out, as it wasn't possible to make it through the switch statement without initializing. Please include links to build breakage in cases like this.
Dongwoo Joshua Im (dwim)
Comment 7
2012-10-17 18:25:14 PDT
When I tried on my macbook pro,build error comes out. The reason was, the variable doesn't initialized, and build warning is treated as build error. If I meet build error next time, I will paste the error log as comment.
Brady Eidson
Comment 8
2012-10-17 22:13:56 PDT
(In reply to
comment #7
)
> When I tried on my macbook pro,build error comes out. > > The reason was, the variable doesn't initialized, > and build warning is treated as build error. > > If I meet build error next time, > I will paste the error log as comment.
As Alexey mentioned the Mac builds clearly didn't have this problem. What is your tools environment like? Note that the reason the variable is actually *not* uninitialized is that it was impossible to make it through the switch statement without initializing it, as all cases were handled.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug