[mac] Fix build break - processPath should be initialized. https://bugs.webkit.org/show_bug.cgi?id=99541

Unreviewed build fix.

Initialize processPath as nil.

Patch by Dongwoo Joshua Im <dw.im@samsung.com> on 2012-10-16

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::createProcess):

Canonical link: https://commits.webkit.org/117508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131551 268f45cc-cd09-0410-ab3c-d52691b4dbfc